--- a/assignment1/css/styles.css
+++ b/assignment1/css/styles.css
@@ -12,7 +12,9 @@ h1 {
   margin-bottom: 50px;
   text-align: center;
   font-size: 250%;
+  text-shadow: 2px 2px 10px #ffffff;
   color: #202020;
+  font-weight: bold;
 }
 p {
   padding-top: 40px;
@@ -21,10 +23,10 @@ p {
 }
 .box {
   border: 1px solid black;
-  width: 90%;
   height: 400px;
-  margin-right: auto;
-  margin-left: auto;
+  padding: 20px;
+  margin-right: 20px;
+  margin-left: 20px;
   margin-bottom: 50px;
   background: rgba(80, 80, 80, 0.8);
   color: white;
@@ -34,9 +36,11 @@ p {
   float: right;
   width: 120px;
   height: 40px;
-  font-size: 160%;
+  font-size: 150%;
+  padding-top: 5px;
   border: 1px solid black;
   text-align: center;
+  font-weight: bold;
 }
 .grass {
   background-color: #01A611;
