--- a/module2/css/styles.css
+++ b/module2/css/styles.css
@@ -1,123 +1,178 @@
 /********** Base styles **********/
 * {
-  font-size: 16px;
-  font-family: 'Tillana', cursive;
+  box-sizing: border-box;
+  font-family: Helvetica;
 }
-
-/** HEADER **/
-#header-nav {
-  background-color: #ffa500;
-  border-radius: 0;
-  border: 1;
-  min-height: 64px;
-}
-
-#sun-img {
-  background: url('../images/sun-icon.png') no-repeat;
-  width: 50px;
-  height: 50px;
-}
-
-#moon-img {
-  background: url('../images/moon-icon.png') no-repeat;
-  width: 50px;
-  height: 50px;
-}
-
-.navbar-brand h1 { /* Name */
-  color: #4CA6FF;
-  font-size: 2em;
-  font-weight: bold;
-  text-shadow: 1px 1px 4px #fff;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 8px;
-  margin-right: 8px;
-}
-.navbar-brand a:hover, .navbar-brand a:focus {
-  text-decoration: none;
-}
-
-#nav-list {
-  margin-top: 10px;
-}
-#nav-list a {
-  color: #4CA6FF;
-  text-align: center;
-  text-shadow: 1px 1px 1px #fff;
-}
-#nav-list a:hover {
-  background: #EDF6FF;
-}
-#nav-list a span {
-  font-size: 1.8em;
-}
-
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid #4CA6FF;
-}
-.navbar-header button.navbar-toggle {
-  clear: both;
-  margin-top: -35px;
-}
-/* END HEADER */
-
-/* BODY */
 body {
-	background-image: url("../images/Alola_artwork.png");
+	background-color: #ffff99;
+	background-image: url("Alola_artwork.png");
 	background-size: cover;
 }
-
-h2 { /* title */
-  color: #ffa500;
-  font-weight: bold;
-  text-shadow: 1px 1px 0px #000;
-  margin: 20px;
-  margin-bottom: 40px;
-}
-
-h3 { /* pokemon names */
-  font-weight: bold;
-  text-shadow: 1px 1px 0px #000;
-}
-
-.poke-tile {
-  border: 1px solid black;
-  height: 800px;
-  margin-right: 5px;
-  margin-left: 5px;
+h1 {
   margin-bottom: 50px;
+  text-align: center;
+  font-size: 250%;
+  text-shadow: 2px 2px 10px #ffffff;
+  color: #202020;
+  font-weight: bold;
+}
+p {
+  padding-top: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.box {
+  border: 1px solid black;
+  height: 400px;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 50px;
+  background: rgba(80, 80, 80, 0.8);
   color: white;
   overflow: auto;
 }
-
-#rowlet {
-	background: rgba(1, 166, 17, 0.8);
+.title {
+  float: right;
+  width: 120px;
+  height: 40px;
+  font-size: 150%;
+  padding-top: 5px;
+  border: 1px solid black;
+  text-align: center;
+  font-weight: bold;
 }
-#litten {
-	background: rgba(255, 165, 0, 0.8);
+.grass {
+  background-color: #01A611;
 }
-#popplio {
-	background: rgba(28, 163, 236, 0.8);
+.fire {
+  background-color: #E38C2D;
 }
-
-#rowlet-img {
-	background: url('../images/rowlet.png');
-	width: 250px;
-  	height: 250px;
+.water {
+  background-color: #1ca3ec;
 }
-#litten-img {
-	background: url('../images/litten.png');
-	width: 250px;
-  	height: 250px;
+/********** Large devices only **********/
+@media (min-width: 992px) {
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+  }
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
 }
-#popplio-img {
-	background: url('../images/popplio.png');
-	width: 250px;
-  	height: 250px;
+/********** Medium devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    float: left;
+  }
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
 }
-
-p {
-padding: 10px;
+/********** Small devices only **********/
+@media (max-width: 767px) {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+    float: left;
+  }
+  .col-sm-1 {
+    width: 8.33%;
+  }
+  .col-sm-2 {
+    width: 16.66%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33%;
+  }
+  .col-sm-5 {
+    width: 41.66%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33%;
+  }
+  .col-sm-8 {
+    width: 66.66%;
+  }
+  .col-sm-9 {
+    width: 74.99%;
+  }
+  .col-sm-10 {
+    width: 83.33%;
+  }
+  .col-sm-11 {
+    width: 91.66%;
+  }
+  .col-sm-12 {
+    width: 100%;
+  }
 }
-
