--- a/module3/css/styles.css
+++ b/module3/css/styles.css
@@ -72,7 +72,7 @@ h2 { /* title */
   color: #ffa500;
   font-weight: bold;
   text-shadow: 1px 1px 0px #000;
-  margin: 20px;
+  margin-top: 80px;
   margin-bottom: 40px;
 }
 
